# apple-gpu-singlecell-benchmark

./: README.md  RESULTS.md  bench.py  make_chart.py  pca_gpu_rsvd.py  probe_mlx_linalg.py  probe_mps_linalg.py  pyproject.toml  requirements.txt
examples/: README.md  singlecell_local_geometry.py
metal_linalg/: README.md  __init__.py  _dispatch.py  accel.py  bench.py  dispatch.py  kernels.metal  kernels.py  patch.py  reference.py  test_phase0.py  test_phase1.py  test_phase10.py  test_phase2.py  test_phase2b.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  tune_batched.py
metal_linalg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
